# birch-beer

./: Dockerfile  README.html  README.org  birch-beer.cabal  default.nix  index.html  stack.yaml
app/: Main.hs
src/BirchBeer/: ColorMap.hs  Interactive.hs  LeafGraph.hs  Load.hs  MainDiagram.hs  Options.hs  Plot.hs  Stopping.hs  Types.hs  Utility.hs
